--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.2",
+    "axios-auth-refresh": "^2.2.8",
+    "babel-plugin-dotenv": "^0.1.1",
     "core-js": "^3.6.5",
-    "quasar": "^1.0.0"
+    "js-cookie": "^2.2.1",
+    "pkce-challenge": "^2.1.0",
+    "quasar": "^1.0.0",
+    "querystring": "^0.2.0",
+    "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
