--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "playlist-compiler",
+  "name": "quick-mix",
   "version": "0.0.1",
-  "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "description": "An app that lets you create spotify playlists on the fly",
+  "productName": "QuickMix",
   "author": "tim <tschartman@yahoo.com>",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "axios-auth-refresh": "^2.2.8",
     "babel-plugin-dotenv": "^0.1.1",
+    "cordova": "^10.0.0",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "pkce-challenge": "^2.1.0",
